# iife-py

./: .gitignore  LICENSE  README.md  example.py  pyproject.toml  setup.py
src/: __init__.py  iife.py
src/iife/: __init__.py
tests/: test_iife.py
