[tool.poetry]
name = "invoke-iife"
version = "0.3.0"
description = "Bringing the fun of immediately-invoked function expressions to Python!"
authors = ["Tor Shepherd <tor.aksel.shepherd@gmail.com>"]
license = "MIT"
readme = "README.md"

documentation = "https://torshepherd.github.io/iife-py"
homepage = "https://torshepherd.github.io/iife-py"
repository = "https://github.com/torshepherd/iife-py"

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

packages = [
    { include = "iife", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
black = "*"
mypy = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
disallow_any_unimported = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_equality = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
check_untyped_defs = true
show_error_codes = true
